bluec-tests/tests/invalid/typedef/cannot_initialize.c
int main(void)
{
    typedef int MyInt = 1;
    return 0;
}